// Inspiration:
// https://www.farishuskovic.dev/blog/server-streaming/
// https://stackoverflow.com/questions/70955064/grpc-multiple-returns-types


syntax = "proto3";

package designer;

// The greeting service definition.
service Designer {
  
  // rpc GetProjectFiles(FileRequest) returns (strex am FileResponse) {}
  rpc OpenFile(FileRequest) returns (stream FileResponse) {}
  // rpc WatchFile(FileRequest) returns (stream WatchResponse) {}
}

// The request message containing the user's name.
message FileRequest {
  string path = 1;
}

// The response message containing the greetings
message FileResponse {
  bytes data = 1;
}

